# yet_another_storage

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/msvc_17_pv_manager_basic_operations/: msvc_17_pv_manager_basic_operations.sln
examples/msvc_17_pv_manager_basic_operations/msvc_17_pv_manager_basic_operations/: main.cpp  msvc_17_pv_manager_basic_operations.vcxproj
examples/pv_manager_basic_operations/: CMakeLists.txt  main.cpp
include/storage/: IStorage.hpp  PVManager.hpp  PVManagerFactory.hpp  Storage.hpp  settings.h  storage_errors.hpp
include/storage/lib/common/: common.h  macros.h  offset_type_traits.hpp
include/storage/lib/devices/: FileDevice.hpp  TestDevice.hpp
include/storage/lib/exceptions/: ExceptionHandler.hpp  YASException.hpp
include/storage/lib/ext/expected/: download
include/storage/lib/inverted_index/: AhoCorasickEngine.hpp  AhoCorasickSerializationHelper.hpp  InvertedIndexHelper.hpp  aho_corasick_serialization_headers.hpp  id_type_traits.hpp  id_type_type_traits.hpp  leaf_type_traits.hpp
include/storage/lib/physical_volume/: EntriesTypeConverter.hpp  FreelistHelper.hpp  PVDeviceDataReaderWriter.hpp  PVEntriesAllocator.hpp  PVEntriesManager.hpp  pv_layout_headers.h
include/storage/lib/utils/: Time.hpp  Version.hpp  serialization_utils.h
lib/: yet_another_storage.sln
lib/unit_tests/: aho_corasick_tests.h  aho_corasick_tests.hpp  main.cpp  test_device_tests.h  unit_tests.vcxproj  unit_tests.vcxproj.filters
lib/unit_tests/tests/: aho_corasick_tests.h  freelist_helper_tests.h  inverted_index_tests.h  pv_manager_tests.h  pv_mount_point_manager_tests.h  storage_tests.h  test_device_tests.h  time_tests.h  version_tests.h
lib/yet_another_storage/: yet_another_storage.vcxproj  yet_another_storage.vcxproj.filters
lib/yet_another_storage/ext/expected/: expected.h
lib/yet_another_storage/src/: main.cpp
lib/yet_another_storage/src/common/: common.h  filesystem.h  macros.h  offset_type_traits.hpp  settings.hpp
lib/yet_another_storage/src/device_worker/: DeviceManager.hpp  FileDevice.cpp  FileDevice.hpp  IDevice.hpp  PVDeviceDataReaderWriter.hpp  PVDeviceWorker.hpp  PVManager.hpp  PVManagerFactory.hpp  PVMountPointManager.hpp
lib/yet_another_storage/src/device_worker/devices/: FileDevice.cpp  FileDevice.hpp  IDevice.hpp  MappedDevice.cpp  (+2 more)
lib/yet_another_storage/src/devices/: FileDevice.hpp  TestDevice.hpp
lib/yet_another_storage/src/exceptions/: ExceptionHandler.hpp  YASException.h  YASException.hpp  YASExceptionHandler.h
lib/yet_another_storage/src/inverted_index_helper/: AhoCorasickEngine.hpp  AhoCorasickSerializationHelper.hpp  InvertedIndexHelper.hpp  aho_corasick_serialization_headers.hpp  leaf_type_traits.hpp
lib/yet_another_storage/src/physical_volume/: EntriesTypeConverter.hpp  FreelistHelper.hpp  PVDeviceDataReaderWriter.hpp  PVEntriesAllocator.hpp  PVEntriesManager.hpp  PVHeader.cpp  pv_layout_headers.h
lib/yet_another_storage/src/storage/: IStorage.hpp  PVManager.hpp  PVManagerFactory.hpp  PVMountPoint.hpp  PVMountPointManager.hpp  PVMountPointManagerAdapter.hpp  PVVolumeManager.hpp  Storage.hpp  StorageTypeConverter.hpp  storage_errors.hpp
lib/yet_another_storage/src/utils/: Time.hpp  Version.hpp  serialization_utils.h
lib/yet_another_storage/src/volume_group/: VolumeGroup.hpp
test/: CMakeLists.txt  download  main.cpp
test/aho_corasick_tests/: CMakeLists.txt  aho_corasick_tests.h  main.cpp
test/freelist_helper_tests/: CMakeLists.txt  freelist_helper_tests.h  main.cpp
test/inverted_index_tests/: CMakeLists.txt  inverted_index_tests.h  main.cpp
test/pv_manager_tests/: CMakeLists.txt  main.cpp  pv_manager_tests.h
test/storage_tests/: CMakeLists.txt  main.cpp  storage_tests.h
test/test_device_tests/: CMakeLists.txt  main.cpp  test_device_tests.h
test/time_tests/: CMakeLists.txt  main.cpp  time_tests.h
test/version_tests/: CMakeLists.txt  main.cpp  version_tests.h
(+13 files in other folders)
